--- a/style.css
+++ b/style.css
@@ -218,3 +218,45 @@ html, body {
     line-height: 32px;
 }
 
+.pagina5 {
+    width: 80%;
+    margin: 0 auto;
+    padding-top: 50px;
+}
+
+.titulo-pontos {
+    font-size: 60px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 60px;
+}
+
+.bloco-ponto {
+    width: 100%;
+    background: white;
+    padding: 35px;
+    border-radius: 35px;
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    margin-bottom: 45px;
+}
+
+.img-ponto {
+    width: 180px;
+    height: 150px;
+    border-radius: 20px;
+    object-fit: cover;
+}
+
+.bloco-texto h2 {
+    font-size: 32px;
+    margin-bottom: 12px;
+    font-weight: bold;
+}
+
+.bloco-texto p {
+    font-size: 22px;
+    margin-bottom: 8px;
+    line-height: 32px;
+}
